# utility-algorithms-rust

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
src/encoding/: mod.rs
src/encoding/bytes/: abae.rs  abae_directory_encoder.rs  file_storage_system.rs  libae.rs  libae_storage_system.rs  mod.rs  tests.rs  the_theory_of_abae.txt  the_theory_of_libae.txt  ubae.rs  ubae_directory_encoder.rs  vec_storage_system.rs
src/encoding/bytes/remote/: rbae.rs  rbae_observer.rs  rbae_server.rs  tests.rs  the_theory_of_rbae.txt
src/encoding/bytes/remote/authenticated/: arbae.rs  arbae_mcnp_causes.rs  arbae_observer.rs  arbae_server.rs  authentication_helper.rs  tests.rs
src/encoding/tag_based/: mod.rs
src/encoding/tag_based/bytes/: libae.rs  mod.rs  tests.rs  the_theory_of_libae.txt  the_theory_of_ubae.txt  ubae.rs  ubae_directory_encoder.rs
src/encoding/tag_based/bytes/remote/: mod.rs  rbae.rs  rbae_mcnp_causes.rs  rbae_observer.rs  rbae_server.rs  tests.rs
src/encoding/tag_based/bytes/remote/authenticated/: arbae.rs  arbae_observer.rs  arbae_server.rs  authentication_helper.rs  mod.rs  tests.rs  the_theory_of_arbae.txt
src/encoding/type_transformer/: mod.rs
src/encoding/type_transformer/bytes/: booleans.rs  mod.rs
src/general/: mod.rs
src/network/: mod.rs
src/network/mcnp/: mcnp_client.rs  mcnp_connection.rs  mcnp_server.rs  mod.rs  tests.rs  the_theory_of_mcnp.txt
src/time_keeper/: mod.rs
src/transparent_storage/: mod.rs
src/transparent_storage/bytes/: file_storage_system.rs  mod.rs  vec_storage_system.rs
src/tui_menu_interface/: mod.rs
