[package]
name = "jokrey_utilities"
version = "0.1.2"
authors = ["jokrey <justin.bennett.developer@gmail.com>"]

[dependencies]
byteorder = "1"
time = "0.1"
rust-crypto = "0.2.36"
base64 = "~0.6.0"
untrusted = "0.5"
ring = "0.12.1"

#[dependencies.ring]
#version = "0.12.1"
#features = ["rsa_signing"]

[profile.test]
opt-level = 0

[profile.release]
panic = 'abort'
opt-level = 3